update BOCR model but need cluster matrix to match results with SD

--- a/Examples/ANP_BOCR_NationalMissileDefensetest/ANP_BOCR_NationalMissileDefense.ipynb
+++ b/Examples/ANP_BOCR_NationalMissileDefensetest/ANP_BOCR_NationalMissileDefense.ipynb
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
     "\n",
     "MilitaryCapabilitysubnet.addNodeConnectionFromNodeToAllNodesOfCluster(Allies.name,CongressCluster.name)\n",
     "MilitaryCapabilitysubnet.addNodeConnectionFromNodeToAllNodesOfCluster(Allies.name,MilitaryCluster.name)\n",
-    "MilitaryCapabilitysubnet.addNodeConnectionFromNodeToAllNodesOfCluster(Allies.name,AlternativesCluster.name)\n",
+    "MilitaryCapabilitysubnet.addNodeConnectionFromTo(Allies.name,GlobalDefense.name)\n",
     "\n",
     "MilitaryCapabilitysubnet.addNodeConnectionFromNodeToAllNodesOfCluster(Industry.name,CongressCluster.name)\n",
     "MilitaryCapabilitysubnet.addNodeConnectionFromNodeToAllNodesOfCluster(Industry.name,MilitaryCluster.name)\n",
@@ -271,27 +271,77 @@
     "MilitaryCapabilitysubnet.addNodeConnectionFromTo(DeployNMD.name,Industry.name)\n",
     "MilitaryCapabilitysubnet.addNodeConnectionFromTo(DeployNMD.name,Allies.name)\n",
     "MilitaryCapabilitysubnet.addNodeConnectionFromTo(DeployNMD.name,TechExperts.name)\n",
-    "MilitaryCapabilitysubnet.addNodeConnectionFromNodeToNodeList(GlobalDefense.name,Military.name,Congress.name,Industry.name,Allies.name,TechExperts.name,RandD.name)\n",
+    "MilitaryCapabilitysubnet.addNodeConnectionFromNodeToNodeList(GlobalDefense.name,Military.name,Congress.name,Industry.name,Allies.name,TechExperts.name)\n",
+    "MilitaryCapabilitysubnet.addNodeConnectionFromNodeToNodeList(GlobalDefense.name,DeployNMD.name,RandD.name)\n",
     "MilitaryCapabilitysubnet.addNodeConnectionFromNodeToNodeList(RandD.name,Military.name,Congress.name,Industry.name,Allies.name,TechExperts.name,DeployNMD.name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export pairewise compare matrix for judgement\n",
+    "# For ANP model we also need pairwise compare of clusters\n",
     "input.export4ExcelQuestFull(MilitaryCapabilitysubnet,\"MilitaryCapability_ControlCriteria_empty.xlsx\",True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/AhpAnpLib/calcs_AHPLib.py:404: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  ci=(lmax-size)/(size-1)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix not a  Hierarchy \n",
+      "Anp result [0.226 0.226 0.073 0.141 0.073 0.115 0.093 0.038 0.014]\n",
+      "Limit matrix [[0.226 0.226 0.226 0.226 0.226 0.226 0.226 0.226 0.000]\n",
+      " [0.226 0.226 0.226 0.226 0.226 0.226 0.226 0.226 0.000]\n",
+      " [0.073 0.073 0.073 0.073 0.073 0.073 0.073 0.073 0.000]\n",
+      " [0.141 0.141 0.141 0.141 0.141 0.141 0.141 0.141 0.000]\n",
+      " [0.073 0.073 0.073 0.073 0.073 0.073 0.073 0.073 0.000]\n",
+      " [0.115 0.115 0.115 0.115 0.115 0.115 0.115 0.115 0.000]\n",
+      " [0.093 0.093 0.093 0.093 0.093 0.093 0.093 0.093 0.000]\n",
+      " [0.038 0.038 0.038 0.038 0.038 0.038 0.038 0.038 0.000]\n",
+      " [0.014 0.014 0.014 0.014 0.014 0.014 0.014 0.014 0.000]]\n",
+      "Matrix not a  Hierarchy \n",
+      "Anp result [0.226 0.226 0.073 0.141 0.073 0.115 0.093 0.038 0.014]\n",
+      "Limit matrix [[0.226 0.226 0.226 0.226 0.226 0.226 0.226 0.226 0.000]\n",
+      " [0.226 0.226 0.226 0.226 0.226 0.226 0.226 0.226 0.000]\n",
+      " [0.073 0.073 0.073 0.073 0.073 0.073 0.073 0.073 0.000]\n",
+      " [0.141 0.141 0.141 0.141 0.141 0.141 0.141 0.141 0.000]\n",
+      " [0.073 0.073 0.073 0.073 0.073 0.073 0.073 0.073 0.000]\n",
+      " [0.115 0.115 0.115 0.115 0.115 0.115 0.115 0.115 0.000]\n",
+      " [0.093 0.093 0.093 0.093 0.093 0.093 0.093 0.093 0.000]\n",
+      " [0.038 0.038 0.038 0.038 0.038 0.038 0.038 0.038 0.000]\n",
+      " [0.014 0.014 0.014 0.014 0.014 0.014 0.014 0.014 0.000]]\n",
+      "Matrix not a  Hierarchy \n",
+      "Anp result [0.226 0.226 0.073 0.141 0.073 0.115 0.093 0.038 0.014]\n",
+      "Limit matrix [[0.226 0.226 0.226 0.226 0.226 0.226 0.226 0.226 0.000]\n",
+      " [0.226 0.226 0.226 0.226 0.226 0.226 0.226 0.226 0.000]\n",
+      " [0.073 0.073 0.073 0.073 0.073 0.073 0.073 0.073 0.000]\n",
+      " [0.141 0.141 0.141 0.141 0.141 0.141 0.141 0.141 0.000]\n",
+      " [0.073 0.073 0.073 0.073 0.073 0.073 0.073 0.073 0.000]\n",
+      " [0.115 0.115 0.115 0.115 0.115 0.115 0.115 0.115 0.000]\n",
+      " [0.093 0.093 0.093 0.093 0.093 0.093 0.093 0.093 0.000]\n",
+      " [0.038 0.038 0.038 0.038 0.038 0.038 0.038 0.038 0.000]\n",
+      " [0.014 0.014 0.014 0.014 0.014 0.014 0.014 0.014 0.000]]\n"
+     ]
+    }
+   ],
    "source": [
-    "calc.calcAHPMatricesSave2File(MilitaryCapabilitysubnet,\"MilitaryCapability_ControlCriteria_empty.xlsx\",\"MilitaryCapability_ControlCriteria_empty.xlsx\")"
+    "calc.calcAHPMatricesSave2File(MilitaryCapabilitysubnet,\"MilitaryCapability_ControlCriteria_filledin.xlsx\",\"MilitaryCapability_ControlCriteria_results.xlsx\")"
    ]
   },
   {
