--- a/Examples/ANP_Hamburger_Marketshare/ANP_Hamburger_MarketShare.ipynb
+++ b/Examples/ANP_Hamburger_Marketshare/ANP_Hamburger_MarketShare.ipynb
@@ -241,83 +241,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Import Excel with filledin\n",
-    "input.importFromExcel(hamburger,'HamburgerModel_Excel_filledIn.xlsx',0)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# calculate supermatrix \n",
-    "# unweighted supermatrix, weighted supermatrix and limit supermatrix\n",
-    "unWighted=calc.calcUnweightedSuperMatrix(hamburger)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "weighted = calc.calcWeightedSupermatrix(hamburger)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start pow 5790\n",
-      "[[1.000 1.000 1.000 1.000 1.000 1.000 1.000 1.000 1.000 1.000 1.000 1.000\n",
-      "  1.000 1.000 1.000 1.000 1.000]\n",
-      " [0.549 0.549 0.549 0.549 0.549 0.549 0.549 0.549 0.549 0.549 0.549 0.549\n",
-      "  0.549 0.549 0.549 0.549 0.549]\n",
-      " [0.492 0.492 0.492 0.492 0.492 0.492 0.492 0.492 0.492 0.492 0.492 0.492\n",
-      "  0.492 0.492 0.492 0.492 0.492]\n",
-      " [0.206 0.206 0.206 0.206 0.206 0.206 0.206 0.206 0.206 0.206 0.206 0.206\n",
-      "  0.206 0.206 0.206 0.206 0.206]\n",
-      " [0.260 0.260 0.260 0.260 0.260 0.260 0.260 0.260 0.260 0.260 0.260 0.260\n",
-      "  0.260 0.260 0.260 0.260 0.260]\n",
-      " [0.527 0.527 0.527 0.527 0.527 0.527 0.527 0.527 0.527 0.527 0.527 0.527\n",
-      "  0.527 0.527 0.527 0.527 0.527]\n",
-      " [0.216 0.216 0.216 0.216 0.216 0.216 0.216 0.216 0.216 0.216 0.216 0.216\n",
-      "  0.216 0.216 0.216 0.216 0.216]\n",
-      " [0.137 0.137 0.137 0.137 0.137 0.137 0.137 0.137 0.137 0.137 0.137 0.137\n",
-      "  0.137 0.137 0.137 0.137 0.137]\n",
-      " [0.309 0.309 0.309 0.309 0.309 0.309 0.309 0.309 0.309 0.309 0.309 0.309\n",
-      "  0.309 0.309 0.309 0.309 0.309]\n",
-      " [0.257 0.257 0.257 0.257 0.257 0.257 0.257 0.257 0.257 0.257 0.257 0.257\n",
-      "  0.257 0.257 0.257 0.257 0.257]\n",
-      " [0.271 0.271 0.271 0.271 0.271 0.271 0.271 0.271 0.271 0.271 0.271 0.271\n",
-      "  0.271 0.271 0.271 0.271 0.271]\n",
-      " [0.061 0.061 0.061 0.061 0.061 0.061 0.061 0.061 0.061 0.061 0.061 0.061\n",
-      "  0.061 0.061 0.061 0.061 0.061]\n",
-      " [0.149 0.149 0.149 0.149 0.149 0.149 0.149 0.149 0.149 0.149 0.149 0.149\n",
-      "  0.149 0.149 0.149 0.149 0.149]\n",
-      " [0.184 0.184 0.184 0.184 0.184 0.184 0.184 0.184 0.184 0.184 0.184 0.184\n",
-      "  0.184 0.184 0.184 0.184 0.184]\n",
-      " [0.154 0.154 0.154 0.154 0.154 0.154 0.154 0.154 0.154 0.154 0.154 0.154\n",
-      "  0.154 0.154 0.154 0.154 0.154]\n",
-      " [0.144 0.144 0.144 0.144 0.144 0.144 0.144 0.144 0.144 0.144 0.144 0.144\n",
-      "  0.144 0.144 0.144 0.144 0.144]\n",
-      " [0.196 0.196 0.196 0.196 0.196 0.196 0.196 0.196 0.196 0.196 0.196 0.196\n",
-      "  0.196 0.196 0.196 0.196 0.196]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "limit = calc.calcLimitANP(weighted,hamburger)"
+    "calc.calcAHPMatricesSave2File(hamburger,\"HamburgerModel_Excel_filledIn.xlsx\",\"HamburgerModel_Excel_results.xlsx\",True,False,True,True)"
    ]
   }
  ],
