update rate examples

--- a/Examples/AHP_Ratings_Employee_Evaluation/Ratings_Employee_evaluation.ipynb
+++ b/Examples/AHP_Ratings_Employee_Evaluation/Ratings_Employee_evaluation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,8 +246,8 @@
     "scale4.defineScaleByValue(None,False,[\"Enthused\",1],[\"Above Average\",0.359],[\"Average\",0.153],[\"Negative\",0.057])\n",
     "EmployEvaluation.rateModel.addScaleByVar(scale4)\n",
     "# 3. import from rcp file\n",
-    "scale5 = input.readRatScaleRPCfile(\"QuantityScale\", \"quantity.rcp\")\n",
-    "scale6 = input.readRatScaleRPCfile(\"QualityScale\", \"quality.rcp\")\n",
+    "scale5 = input.readRatScaleRCPfile(\"QuantityScale\", \"quantity.rcp\")\n",
+    "scale6 = input.readRatScaleRCPfile(\"QualityScale\", \"quality.rcp\")\n",
     "EmployEvaluation.rateModel.addScaleByVar(scale5)\n",
     "EmployEvaluation.rateModel.addScaleByVar(scale6)"
    ]
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,14 +305,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "load\n"
+      "load\n",
+      "No ratings tables available to load\n"
      ]
     }
    ],
@@ -325,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +378,7 @@
    ],
    "source": [
     "# in this last step, we calculate ratings results and export it to an excel file\n",
-    "input.calcExcelRatings(EmployEvaluation,\"Ratings_Employee_Eval_ratingstable_filledin.xlsx\",\"Ratings_Employee_Eval_ratingsresults.xlsx\")"
+    "input.calcExcelRatings(EmployEvaluation,\"Ratings_Employee_Eval_ratingstable_filled.xlsx\",\"Ratings_Employee_Eval_ratingsresults.xlsx\")"
    ]
   }
  ],
