bugTest and Example test change

--- a/Examples/AHP_Car_Selection/AHP_CarExample.ipynb
+++ b/Examples/AHP_Car_Selection/AHP_CarExample.ipynb
@@ -221,7 +221,7 @@
       "File Len= 41\n",
       "excel                                                     0          1  \\\n",
       "0                                            GoalNode          0   \n",
-      "1   Enter judgments for the paiwise comparisons in...          0   \n",
+      "1   Enter pairwise comparisons in the white cells ...          0   \n",
       "2                                           2Criteria  1Prestige   \n",
       "3                                           1Prestige          1   \n",
       "4                                              2Price          4   \n",
@@ -230,7 +230,7 @@
       "7                                          Sum of Col  10.000003   \n",
       "8                                                   0          0   \n",
       "9                                           1Prestige          0   \n",
-      "10  Enter judgments for the paiwise comparisons in...          0   \n",
+      "10  Enter pairwise comparisons in the white cells ...          0   \n",
       "11                                      3Alternatives  1Acura TL   \n",
       "12                                          1Acura TL          1   \n",
       "13                                      2Toyota Camry      0.125   \n",
@@ -238,7 +238,7 @@
       "15                                         Sum of Col      1.375   \n",
       "16                                                  0          0   \n",
       "17                                             2Price          0   \n",
-      "18  Enter judgments for the paiwise comparisons in...          0   \n",
+      "18  Enter pairwise comparisons in the white cells ...          0   \n",
       "19                                      3Alternatives  1Acura TL   \n",
       "20                                          1Acura TL          1   \n",
       "21                                      2Toyota Camry          0   \n",
@@ -246,7 +246,7 @@
       "23                                         Sum of Col          0   \n",
       "24                                                  0          0   \n",
       "25                                               3MPG          0   \n",
-      "26  Enter judgments for the paiwise comparisons in...          0   \n",
+      "26  Enter pairwise comparisons in the white cells ...          0   \n",
       "27                                      3Alternatives  1Acura TL   \n",
       "28                                          1Acura TL          1   \n",
       "29                                      2Toyota Camry   1.499925   \n",
@@ -254,7 +254,7 @@
       "31                                         Sum of Col   5.499928   \n",
       "32                                                  0          0   \n",
       "33                                           4Comfort          0   \n",
-      "34  Enter judgments for the paiwise comparisons in...          0   \n",
+      "34  Enter pairwise comparisons in the white cells ...          0   \n",
       "35                                      3Alternatives  1Acura TL   \n",
       "36                                          1Acura TL          1   \n",
       "37                                      2Toyota Camry       0.25   \n",
@@ -405,46 +405,23 @@
       "[[1.000 4.000 7.000]\n",
       " [0.250 1.000 3.000]\n",
       " [0.143 0.333 1.000]]\n",
-      "Cluster: 3Alternatives\n",
-      "Saved inconsistency for cluster-node :  2Criteria - GoalNode\n",
-      "Saved inconsistency for cluster-node :  3Alternatives - 1Prestige\n",
-      "Saved inconsistency for cluster-node :  3Alternatives - 2Price\n",
-      "Saved inconsistency for cluster-node :  3Alternatives - 3MPG\n",
-      "Saved inconsistency for cluster-node :  3Alternatives - 4Comfort\n",
-      "---------------------------------------------------------------------------\n",
-      "\n",
-      "Inconsistency indices:\n",
-      "[0.077, 0.052, 0.0, 0.0, 0.031]\n",
-      "---------------------------------------------------------------------------\n",
-      "\n",
-      "Priority vectors:\n",
-      "[array([0.099, 0.425, 0.169, 0.308]), array([0.707, 0.070, 0.223]), array([0.063, 0.194, 0.743]), array([0.182, 0.273, 0.545]), array([0.705, 0.211, 0.084])]\n",
-      "-----------------------SUPERMATRIX----------------------------------------------------\n",
-      "\n",
-      "[[0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000]\n",
-      " [0.099 0.000 0.000 0.000 0.000 0.000 0.000 0.000]\n",
-      " [0.425 0.000 0.000 0.000 0.000 0.000 0.000 0.000]\n",
-      " [0.169 0.000 0.000 0.000 0.000 0.000 0.000 0.000]\n",
-      " [0.308 0.000 0.000 0.000 0.000 0.000 0.000 0.000]\n",
-      " [0.000 0.707 0.063 0.182 0.705 0.000 0.000 0.000]\n",
-      " [0.000 0.070 0.194 0.273 0.211 0.000 0.000 0.000]\n",
-      " [0.000 0.223 0.743 0.545 0.084 0.000 0.000 0.000]]\n",
-      "-----------------------HIERARCHY----------------------------------------------------\n",
-      "\n",
-      "[[0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000]\n",
-      " [0.049 0.000 0.000 0.000 0.000 0.000 0.000 0.000]\n",
-      " [0.212 0.000 0.000 0.000 0.000 0.000 0.000 0.000]\n",
-      " [0.084 0.000 0.000 0.000 0.000 0.000 0.000 0.000]\n",
-      " [0.154 0.000 0.000 0.000 0.000 0.000 0.000 0.000]\n",
-      " [0.172 0.707 0.063 0.182 0.705 0.000 0.000 0.000]\n",
-      " [0.100 0.070 0.194 0.273 0.211 0.000 0.000 0.000]\n",
-      " [0.228 0.223 0.743 0.545 0.084 0.000 0.000 0.000]]\n",
-      "----------------------------LIMITING-----------------------------------------------\n",
-      "\n",
-      "[0.000 0.049 0.212 0.084 0.154 0.172 0.100 0.228]\n",
-      "---------------------------BY CLUSTER------------------------------------------------\n",
-      "\n",
-      "[0.000 0.099 0.425 0.169 0.308 0.344 0.200 0.455]\n"
+      "Cluster: 3Alternatives\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'Select a Car with a 2 Level Model.png'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m inputFile\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcarModel_Excel_filledin.xlsx\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      3\u001b[0m outputFile \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcarModel_Results.xlsx\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 4\u001b[0m \u001b[43mcalc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcalcAHPMatricesSave2File\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcarModel\u001b[49m\u001b[43m,\u001b[49m\u001b[43minputFile\u001b[49m\u001b[43m,\u001b[49m\u001b[43moutputFile\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m#the bove command will:\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m#calculate supermatrix, weighted, limiting and global priorities\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m#will save results to filepath of set as outputFile above\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m#6th parameter: if ideal bar true then will show bars for ideal eigen\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m#7th parameter: if verbal true will print out the intermediate results\u001b[39;00m\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/AhpAnpLib/calcs_AHPLib.py:835\u001b[0m, in \u001b[0;36mcalcAHPMatricesSave2File\u001b[0;34m(model, inputFile, filepath, inputFileUse, normalbar, idealbar, verbal)\u001b[0m\n\u001b[1;32m    832\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m(inputFileUse):\n\u001b[1;32m    833\u001b[0m     cdf_inp\u001b[38;5;241m.\u001b[39mimportFromExcel(model,inputFile,\u001b[38;5;241m0\u001b[39m,verbal)\n\u001b[0;32m--> 835\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdrawGraphModel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    837\u001b[0m \u001b[38;5;66;03m#add the inputs to the results file\u001b[39;00m\n\u001b[1;32m    838\u001b[0m copyExcelSheet(inputFile, filepath, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpairwise_comp\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/AhpAnpLib/structs_AHPLib.py:646\u001b[0m, in \u001b[0;36mModel.drawGraphModel\u001b[0;34m(self, filepath, verb)\u001b[0m\n\u001b[1;32m    644\u001b[0m \u001b[38;5;66;03m# Create a new worksheet named \"Graph Model\" and insert the PNG image\u001b[39;00m\n\u001b[1;32m    645\u001b[0m worksheet \u001b[38;5;241m=\u001b[39m workbook\u001b[38;5;241m.\u001b[39mcreate_sheet(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGraph Model\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 646\u001b[0m img \u001b[38;5;241m=\u001b[39m \u001b[43mreqLib\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mImage\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m.png\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    648\u001b[0m \u001b[38;5;66;03m# Save to Excel\u001b[39;00m\n\u001b[1;32m    649\u001b[0m worksheet\u001b[38;5;241m.\u001b[39madd_image(img, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mA1\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/openpyxl/drawing/image.py:32\u001b[0m, in \u001b[0;36mImage.__init__\u001b[0;34m(self, img)\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mref \u001b[38;5;241m=\u001b[39m img\n\u001b[1;32m     31\u001b[0m mark_to_close \u001b[38;5;241m=\u001b[39m \u001b[38;5;28misinstance\u001b[39m(img, \u001b[38;5;28mstr\u001b[39m)\n\u001b[0;32m---> 32\u001b[0m image \u001b[38;5;241m=\u001b[39m \u001b[43m_import_image\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     33\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mwidth, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mheight \u001b[38;5;241m=\u001b[39m image\u001b[38;5;241m.\u001b[39msize\n\u001b[1;32m     35\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/openpyxl/drawing/image.py:16\u001b[0m, in \u001b[0;36m_import_image\u001b[0;34m(img)\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mYou must install Pillow to fetch image objects\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(img, PILImage\u001b[38;5;241m.\u001b[39mImage):\n\u001b[0;32m---> 16\u001b[0m     img \u001b[38;5;241m=\u001b[39m \u001b[43mPILImage\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m img\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/PIL/Image.py:3236\u001b[0m, in \u001b[0;36mopen\u001b[0;34m(fp, mode, formats)\u001b[0m\n\u001b[1;32m   3233\u001b[0m     filename \u001b[38;5;241m=\u001b[39m fp\n\u001b[1;32m   3235\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m filename:\n\u001b[0;32m-> 3236\u001b[0m     fp \u001b[38;5;241m=\u001b[39m \u001b[43mbuiltins\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3237\u001b[0m     exclusive_fp \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m   3239\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'Select a Car with a 2 Level Model.png'"
      ]
     }
    ],
