test import supermatrix

--- a/Examples/AHP_Lunch/AHP_LunchExample.ipynb
+++ b/Examples/AHP_Lunch/AHP_LunchExample.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -226,24 +226,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input.export4ExcelQuestFull(lunchModel,\"lunchModel_Excel_empty.xlsx\",True)\n"
+    "# export questionnaire\n",
+    "input.export4ExcelQuestFull(lunchModel,\"lunchModel_Excel_empty.xlsx\",True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\ERok\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\shapely\\set_operations.py:133: RuntimeWarning: invalid value encountered in intersection\n",
-      "  return lib.intersection(a, b, **kwargs)\n"
+      "x: 0.268, y: 0.294\n",
+      "x: 0.846, y: 0.361\n",
+      "x: 0.352, y: 0.296\n",
+      "x: 0.101, y: 0.301\n",
+      "x: 0.453, y: 0.358\n",
+      "x: 0.279, y: 0.297\n",
+      "x: 0.842, y: 0.253\n"
      ]
     },
     {
@@ -288,11 +294,14 @@
     }
    ],
    "source": [
+    "#import questionnaire and calculate and export results\n",
     "inputFilePath=\"lunchModel_Excel_filledIn.xlsx\"\n",
     "outputFilePath=\"lunchModel_Results.xlsx\"\n",
     "\n",
     "#input.importFromExcel(lunchModel,inputFilePath,0)\n",
     "calc.calcAHPMatricesSave2File(lunchModel,inputFilePath,outputFilePath,True,True,True,False)\n",
+    "\n",
+    "#sensitivity analysis\n",
     "calc.sensitivityCellSupermatrixPlot(lunchModel,\"3Alternatives\",outputFilePath,False,\"1Quality\",\"2Price\",\"3Menu\",\"4Speed\")\n"
    ]
   }
@@ -313,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
