update car, lunch, car ratings and lunch ratings models

--- a/Examples/AHP_Lunch/AHP_LunchExample.ipynb
+++ b/Examples/AHP_Lunch/AHP_LunchExample.ipynb
@@ -15,25 +15,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Model Name: Lunch\n",
-      "Type:pairwise\n",
-      "Nodes: []\n",
-      " Clusters: []\n",
-      " Node Connections: []\n",
-      " Cluster Connections: []\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#create model\n",
-    "lunchModel=str.Model(\"Lunch\")\n",
-    "print(lunchModel)"
+    "lunchModel=str.Model(\"Lunch\")"
    ]
   },
   {
@@ -76,7 +61,7 @@
     "#add nodes to clusters\n",
     "cluster0.addNode2Cluster(goal_node) \n",
     "cluster1.addMultipleNodes2Cluster(menu,quality,price,speed)\n",
-    "cluster2.addMultipleNodes2Cluster(alt1,alt2,alt3)\n"
+    "cluster2.addMultipleNodes2Cluster(alt1,alt2,alt3)"
    ]
   },
   {
@@ -108,50 +93,10 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "_________________________MODEL STRUCTURE_________________________\n",
-      "Name: Lunch\n",
-      "Type: pairwise\n",
-      "\n",
-      "____________________________NODES_______________________________\n",
-      "GoalNode order: 0\n",
-      "1Quality order: 1\n",
-      "2Price order: 2\n",
-      "3Menu order: 3\n",
-      "4Speed order: 4\n",
-      "1Primanti order: 5\n",
-      "2Panera order: 6\n",
-      "3Piada order: 7\n",
-      "____________________________CLUSTERS____________________________\n",
-      "1Goal order: 0\n",
-      "2Criteria order: 1\n",
-      "3Alternatives order: 2\n",
-      "_________________________NODE CONNECTIONS___________________________\n",
-      "No connections from GoalNode\n",
-      "No connections from 1Quality\n",
-      "No connections from 2Price\n",
-      "No connections from 3Menu\n",
-      "No connections from 4Speed\n",
-      "No connections from 1Primanti\n",
-      "No connections from 2Panera\n",
-      "No connections from 3Piada\n",
-      "_________________________CLUSTER CONNECTIONS__________________\n",
-      "No connections from 1Goal\n",
-      "No connections from 2Criteria\n",
-      "No connections from 3Alternatives\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#add clusters to model \n",
-    "lunchModel.addMultipleClusters2Model(cluster0,cluster1,cluster2)\n",
-    "\n",
-    "#print\n",
-    "lunchModel.printStruct()"
+    "lunchModel.addMultipleClusters2Model(cluster0,cluster1,cluster2)"
    ]
   },
   {
