--- a/Examples/AHP_Ratings_Lunch/AHP Ratings_LunchExample.ipynb
+++ b/Examples/AHP_Ratings_Lunch/AHP Ratings_LunchExample.ipynb
@@ -228,7 +228,7 @@
     "#add scales to the model\n",
     "lunchModel.rateModel.addScaleByVar(scale1,scale2,scale3)\n",
     "\n",
-    "#\n",
+    "#assign scales to corresponding criteria\n",
     "lunchModel.rateModel.assignScale2CriterionByName(\"1Quality\",\"1QualityScale\")\n",
     "lunchModel.rateModel.assignScale2CriterionByName(\"2Price\",\"2PriceScale\")\n",
     "lunchModel.rateModel.assignScale2CriterionByName(\"3Menu\",\"1QualityScale\")\n",
@@ -281,7 +281,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "load\n"
+      "load\n",
+      "No ratings tables available to load\n"
      ]
     }
    ],
@@ -520,8 +521,11 @@
       "+---+---+---+---+\n",
       "-----------------------PRIORITIES----------------------------------------------------\n",
       "\n",
-      "[1Quality order: 1, 2Price order: 2, 3Menu order: 3, 4Speed order: 4]\n",
-      "[0.2609430406361969, 0.11895926989795849, 0.16892798352672225, 0.45116970593912237]\n",
+      "Re-normalized priorities based on the selected criteria for the rating model\n",
+      "1Quality :  0.2609430406361969\n",
+      "2Price :  0.11895926989795849\n",
+      "3Menu :  0.16892798352672225\n",
+      "4Speed :  0.45116970593912237\n",
       "setting up rating scales comparison matrices \n",
       "Criterion: 1Quality order: 1\n",
       "\n",
@@ -697,6 +701,14 @@
       "---------------------------------------------------------------------------\n",
       "\n",
       "Rating Table:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/openpyxl/worksheet/_reader.py:329: UserWarning: Data Validation extension is not supported and will be removed\n",
+      "  warn(msg)\n"
      ]
     }
    ],
