update Employee evaluation rating model

--- a/Examples/AHP_Ratings_Employee_Evaluation/Ratings_Employee_evaluation.ipynb
+++ b/Examples/AHP_Ratings_Employee_Evaluation/Ratings_Employee_evaluation.ipynb
@@ -153,7 +153,7 @@
     }
    ],
    "source": [
-    "# when use printStruct command to display and valide the model structure\n",
+    "# when use printStruct command to display and validate the model structure\n",
     "EmployEvaluation.printStruct()"
    ]
   },
@@ -170,8 +170,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# when create a model, the model by default is a pairewise compare model\n",
-    "# we use setModelTypeRatings command to change the model to a ratings model\n",
+    "#when create a model, the model by default is a pairwise compare model\n",
+    "#we use setModelTypeRatings command to change the model to a ratings model\n",
     "EmployEvaluation.setModelTypeRatings()"
    ]
   },
@@ -188,10 +188,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# to set up the ratings model, we add Criteria first\n",
-    "# when add criteria model we add the bottom level criteria in the AHP model as criteria\n",
-    "# we can use addCriteriaByVar command by specifying criteria object name\n",
-    "# or we can use addCriteriaByName command by specifying criteria name\n",
+    "#to set up the ratings model, we add Criteria first\n",
+    "#when add criteria model we add the bottom level criteria in the AHP model as criteria\n",
+    "#we can use addCriteriaByVar command by specifying criteria object name\n",
+    "#or we can use addCriteriaByName command by specifying criteria name\n",
     "EmployEvaluation.rateModel.addCriteriaByVar(Dependability,Education,Experience,Attitude,Leadership)\n",
     "EmployEvaluation.rateModel.addCriteriaByName(\"Quantity\",\"Quality\")"
    ]
@@ -209,11 +209,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We can create alternatives in advance \n",
-    "# or add new alternatives when adding alternatives in the ratings model\n",
-    "# here we add new alternatives directly to the ratings model\n",
-    "# when the alternatives are not created, we use the addAlternativesByName and provide alternative names\n",
-    "# then the alternatives will be created automatically\n",
+    "#We can create alternatives in advance \n",
+    "#or add new alternatives when adding alternatives in the ratings model\n",
+    "#here we add new alternatives directly to the ratings model\n",
+    "#when the alternatives are not created, we use the addAlternativesByName and provide alternative names\n",
+    "#then the alternatives will be created automatically\n",
     "EmployEvaluation.rateModel.addAlternativesByName(\"Jim Kendall\",\"Sally Brown\",\"John Carter\",\"Mi Sung\",\"Arturo Chavez\")"
    ]
   },
@@ -230,7 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. Create a new scale (make pairewise comparisons in Excel questionnaire)\n",
+    "# 1. Create a new scale (make pairwise comparisons in Excel questionnaire)\n",
     "scale1=rate.RatScale(\"OutstandingtoUnsatisfactory\")\n",
     "scale1.defineScaleByValue(None,False,\"Outstanding\",\"Very Good\",\"Good\",\"Below Average\",\"Unsatisfactory\")\n",
     "# add the scale to the model\n",
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
